<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <EditText
            android:textColor="#FDFDFE"
            android:id="@+id/edtFullname"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/fullname"
            android:inputType="textNoSuggestions|textVisiblePassword"
            android:textSize="20sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <EditText
            android:textColor="#FDFDFE"
            android:id="@+id/phonenumber"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:inputType="phone"
            android:textSize="20sp" />
    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:id="@+id/rdGroup"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rdbtnBoy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:checked="true"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/rbtnGirl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvbirthday"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/birth_day"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/ok"
        android:theme="@style/MyButton" />
</LinearLayout>