<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_marginTop="30dp"
        android:id="@+id/view2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:elevation="12dp"
        android:innerRadius="0dp"
        android:shape="ring"
        android:thicknessRatio="1.9"
        app:cardCornerRadius="40dp"
        app:cardElevation="10dp">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/img_profile"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/description"
            app:civ_border_color="@color/backbroundregister"
            app:civ_border_width="1dp" />
    </android.support.v7.widget.CardView>


    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnchooseIamge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose"
            android:theme="@style/MyButton" />

        <Button
            android:id="@+id/btntakePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_photo"
            android:theme="@style/MyButton" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/edt_IdUser"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/id"
            android:inputType="textNoSuggestions|textVisiblePassword"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:textColor="#FDFDFE" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:textColor="#FDFDFE" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ok"
        android:theme="@style/MyButton" />

</LinearLayout>