<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/img_editimage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:contentDescription="@string/description"
            app:civ_border_color="@color/backbroundregister"
            app:civ_border_width="1dp" />


    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <EditText
            android:textColor="#FDFDFE"
            android:id="@+id/edtFullname"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/fullname"
            android:inputType="textNoSuggestions|textVisiblePassword"
            android:textSize="20sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <EditText
            android:textColor="#FDFDFE"
            android:id="@+id/edteditPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/pass"
            android:inputType="textNoSuggestions|textVisiblePassword"
            android:textSize="20sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <EditText
            android:textColor="#FDFDFE"
            android:id="@+id/edteditphone"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:inputType="phone"
            android:textSize="20sp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/ok"
        android:theme="@style/MyButton" />

</LinearLayout>