<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="11dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgFrom"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/description" />

            <Spinner
                android:id="@+id/spinFrom"
                android:layout_width="150dp"
                android:layout_height="wrap_content" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <EditText
                    android:id="@+id/edtInputValue"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/hintinput_value"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/description"
            android:src="@drawable/ic_if_bitcoin_dollar_exchange_532651" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgTo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/description" />

            <Spinner
                android:id="@+id/spinTo"
                android:layout_width="150dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvresult"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/result"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/ok"
        android:theme="@style/MyButton" />
</LinearLayout>