<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:CircleProgressView="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgCancel"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/description"
        android:padding="10dp"
        android:src="@drawable/cancel" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="@drawable/background" />

    <RelativeLayout
        android:id="@+id/ll_imageofregister"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <at.grabner.circleprogress.CircleProgressView
            android:id="@+id/CircleProgressView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:transitionName="@string/name_transition"
            CircleProgressView:cpv_autoTextSize="true"
            CircleProgressView:cpv_barColor="#FFEB3B"
            CircleProgressView:cpv_innerContourSize="1dp"
            CircleProgressView:cpv_maxValue="100"
            CircleProgressView:cpv_outerContourSize="1dp"
            CircleProgressView:cpv_showUnit="true"
            CircleProgressView:cpv_spinColor="@color/colorAccent"
            CircleProgressView:cpv_textColor="@color/textWhite"
            CircleProgressView:cpv_unit="%"
            CircleProgressView:cpv_unitColor="@color/textWhite"
            CircleProgressView:cpv_unitPosition="right_top"
            CircleProgressView:cpv_value="0" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ll_imageofregister">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true">

            <ProgressBar
                android:id="@+id/progress_barofregister1"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="3dp"
                android:layout_height="80dp"
                android:layout_marginLeft="51dp"
                android:layout_marginStart="51dp"
                android:layout_marginTop="46dp"
                android:max="100"
                android:progress="0"
                android:progressDrawable="@drawable/progress_drawable_vertical"
                android:visibility="visible" />

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:visibility="visible">

                <TextView
                    android:id="@+id/tv_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@null"
                    android:gravity="center"
                    android:text="@string/updateprofile"
                    android:textColor="@color/textWhite"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_descriptionprofile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_profile"
                    android:gravity="center"
                    android:text="@string/photo_nick_name"
                    android:textColor="@color/textWhite"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/img_profile"
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:layout_marginLeft="29dp"
                    android:layout_marginStart="29dp"
                    android:background="@drawable/circlepress"
                    android:contentDescription="@string/description" />

                <View
                    android:id="@+id/viewregisterprofile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.6"
                    android:background="@drawable/bg_view_ripple" />
            </RelativeLayout>

            <ProgressBar
                android:id="@+id/progress_barofregister2"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="3dp"
                android:layout_height="80dp"
                android:layout_below="@id/progress_barofregister1"
                android:layout_marginLeft="51dp"
                android:layout_marginStart="51dp"
                android:layout_marginTop="46dp"
                android:max="100"
                android:progress="0"
                android:progressDrawable="@drawable/progress_drawable_vertical"
                android:visibility="visible" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_below="@id/progress_barofregister1"
                android:visibility="visible">

                <TextView
                    android:id="@+id/tv_information"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@null"
                    android:gravity="center"
                    android:text="@string/personal_information"
                    android:textColor="#100f0f" />

                <TextView
                    android:id="@+id/tv_descriptionInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_information"
                    android:gravity="center"
                    android:text="@string/description" />

                <ImageView
                    android:id="@+id/img_information"
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:layout_marginLeft="29dp"
                    android:layout_marginStart="29dp"
                    android:background="@drawable/circledefault"
                    android:contentDescription="@string/description"
                    android:visibility="visible" />

                <View
                    android:id="@+id/viewregisterInfor"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.6"
                    android:background="@drawable/bg_view_ripple" />
            </RelativeLayout>

            <ProgressBar
                android:id="@+id/progress_barofregister3"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="3dp"
                android:layout_height="80dp"
                android:layout_below="@id/progress_barofregister2"
                android:layout_marginLeft="51dp"
                android:layout_marginStart="51dp"
                android:layout_marginTop="46dp"
                android:max="100"
                android:progress="0"
                android:progressDrawable="@drawable/progress_drawable_vertical"
                android:visibility="visible" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_below="@id/progress_barofregister2"
                android:visibility="visible">

                <TextView
                    android:id="@+id/tv_readlicence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@null"
                    android:gravity="center"
                    android:text="@string/readlincence"
                    android:textColor="#100f0f" />

                <TextView
                    android:id="@+id/tv_descriptionLicence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_readlicence"
                    android:gravity="center"
                    android:text="@string/description" />

                <ImageView
                    android:id="@+id/img_readlicence"
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:layout_marginLeft="29dp"
                    android:layout_marginStart="29dp"
                    android:background="@drawable/circledefault"
                    android:contentDescription="@string/description"
                    android:visibility="visible" />

                <View
                    android:id="@+id/viewregisterlicence"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.6"
                    android:background="@drawable/bg_view_ripple" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_below="@id/progress_barofregister3"
                android:visibility="visible">

                <TextView
                    android:id="@+id/tv_completedRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@null"
                    android:gravity="center"
                    android:text="@string/compeletedregister"
                    android:textColor="#100f0f" />

                <TextView
                    android:id="@+id/tv_descriptionComplete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_completedRegister"
                    android:gravity="center"
                    android:text="@string/description" />

                <ImageView
                    android:id="@+id/img_CompletedRegister"
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:layout_marginLeft="29dp"
                    android:layout_marginStart="29dp"
                    android:background="@drawable/circledefault"
                    android:contentDescription="@string/description"
                    android:visibility="visible" />

                <View
                    android:id="@+id/viewregisterCompleted"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.6"
                    android:background="@drawable/bg_view_ripple" />
            </RelativeLayout>

        </RelativeLayout>


    </ScrollView>

</RelativeLayout>